Authorization Header and downstream API endpoints updates
